# aws-cdk-small-examples

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml
article/: README.md
docs/: Makefile
python/: generate_diagrams.py
python/api-cors-lambda/: app.py
python/api-cors-lambda/lambda_script/: lambda_handler.py
python/apigw-dynamodb-lambda/: README.md  app.py
python/apigw-dynamodb-lambda/lambda_script/: lambda_handler.py
python/apigw-dynamodb-sfn-with-heavytask/: README.md  app.py
python/apigw-dynamodb-sfn-with-heavytask/lambda_script/: lambda_handler.py
python/apigw-lambda/: README.md  app.py
python/apigw_dynamodb_lambda/: README.md  app.py
python/apigw_dynamodb_lambda/lambda_script/: lambda_handler.py
python/apigw_lambda/: README.md
python/apigw_lambda/lambda_script/: lambda_handler.py
python/batch-stepfunctions/: README.md  app.py
python/batch-stepfunctions-nested/: README.md  app.py  batch_stack.py  inoke_stack.py  vpc_stack.py
python/batch-stepfunctions-nested/docker/: Dockerfile
python/batch-stepfunctions/docker/: Dockerfile  Makefile  requirements.txt
python/cloudfront-s3/: README.md  app.py  requirements.txt
python/cloudfront-s3/html/: index.html
python/glue-stepfunctions/: README.md  app.py
python/lambda-container/: README.md  app.py
python/lambda-container/docker/: Dockerfile  app.py  (+1 more)
python/lambda-creating-lambda_layers/: README.md  app.py
python/lambda-stepfunctions/: README.md  app.py
python/vpc-subnet-basic/: app.py  subnet_stack.py  vpc_stack.py
python/waf-alb-ec2-glue-athena-s3/: README.md  app.py
(+6 files in other folders)
