[tool.poetry]
name = "aws-cdk-small-examples"
version = "0.1.0"
description = ""
authors = ["gsy0911 <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aws-cdk-core = "^1.71.0"
aws-cdk-aws-lambda = "^1.71.0"
aws-cdk-aws-stepfunctions = "^1.71.0"
aws-cdk-aws-stepfunctions-tasks = "^1.71.0"
aws-cdk-aws-events-targets = "^1.71.0"
"aws-cdk.aws-ec2" = "^1.71.0"
"aws-cdk.aws-batch" = "^1.71.0"
"aws-cdk.aws-ecr" = "^1.71.0"
watchtower = "^1.0.0"
boto3 = "^1.16.11"
"aws-cdk.aws-glue" = "^1.71.0"
"aws-cdk.aws-cloudfront-origins" = "^1.73.0"
"aws-cdk.aws-s3-deployment" = "^1.73.0"
"aws-cdk.aws-waf" = "^1.75.0"
"aws-cdk.aws-athena" = "^1.75.0"

[tool.poetry.dev-dependencies]
sphinx = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
